SubVersion: $Id$
	
Log:

- 12/11/2006, version 1.0.2: roms
	- fixed memory overlap in send_flash_app (may be related to bug #1583155)

- 21/02/2006, version 1.0.1: roms
	- use angle brackets to include installed ticonv.h (kevin).
	- conditionalize #pragma warning on #ifdef _MSC_VER, not #ifdef __WIN32_ (kevin).
	- changed TIEXPORT into TIEXPORT3
	- B. Moody fix: replaced all snprintf by g_snprintf (truncate OS version under Linux)
	- 68k ROM dumpers: only dump 4 MB on HW4 (same as HW3)
	- check handle to avoid NULL dereference
	- dusb_cmd.c: uses BB00 packet value as delay
	- Titanium can't handle more that 16 parameters at a time => get_version split

- 17/09/2006, tagged as version 1.0.0: roms
	- added support for TILIBS_DEPRECATED (exports symbols which have been tagged as deprecated)

- 14/09/2006, version 0.2.8: roms
	- splitted ROM dumping into 2 parts (prgm sending and ROM receiving) so that user can have 
		time to enter required commands
	- fixed TI73 OS sending
	- fixed TI73 version (BCD encoded)
	- fixed sending of FLASH OS on V200PLT (need to pass HW_ID).

- 04/09/2006, version 0.2.7: roms
	- fixed TI73 probing
	- added new TI89 error code (0x21: can't delete var)
	- exported ERR_ABORT value
	- fixed TI84+ battery status
	- updated/fixed TI86 dumper
	- Titanium/USB didn't have the FTS_FOLDER flag
	- correctly set up the data_type & device_type field of FlashContent when receiving app

- 26/08/2006, version 0.2.6: roms
	- checked with Valgrind, tested and validated.
	
- 08/08/2006, version 0.2.5: roms
	- added TIG_BACKUP flag (needed to avoid clearing of RAM)
	- convert DUSB error packets into error message (O. Armand request)
	- convert DBUS error packets into error message (K. Kofler request)

- 18/07/2006, version 0.2.4: roms
	- added ticalcs_probe for Kevin and I. This function is complete because it handles 
		all of the probing (open/close handle, probe for all/FLASH only devices).