@@ -70,7 +70,7 @@ static const VtlPktName vpkt_types[] =
 	{ 0x000E, "Parameter Set"},
 	{ 0x000F, ""},
 	{ 0x0010, "Delete Variable"},
-	{ 0x0011, "Unknown"},
+	{ 0x0011, "Remote Control"},
 	{ 0x0012, "Acknowledgement of Mode Setting"},
 	{ 0xAA00, "Acknowledgement of Data"},
 	{ 0xBB00, "Delay Acknowledgment"},
